# NetScope

./: .gitignore  Dockerfile  README.md  docker-compose.yml
agent/: go.mod  main.go
agent/ebpfimpl/: loader.go
agent/k8s/: resolver.go
agent/metrics/: collector.go
agents/python_scanner/: Dockerfile  main.py  requirements.txt
agents/python_scanner/scanner/: __init__.py  device_tracker.py  main.py
backend/: Dockerfile  netscope_cli.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: agents.py  alerts.py  auth.py  devices.py  flows.py  metrics.py  router.py  threat_intel.py  ws.py
backend/app/core/: deps.py  security.py
backend/app/schemas/: alerts.py  common.py  devices.py
backend/app/services/: alerting.py  anomaly_detector.py  auto_response.py  device_store.py  flow_processor.py  ids_engine.py  prometheus_client.py  threat_intel.py
backend/app/websocket/: manager.py
dashboards/: network-observability.json
docs/: api.md  architecture.md  deployment.md  optional-features.md
ebpf/: Makefile  tcp_observability.c
ebpf/headers/: vmlinux.h
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
k8s/: configmap-ebpf.yaml  daemonset.yaml  namespace.yaml  rbac.yaml  service.yaml  servicemonitor.yaml
k8s/backend/: deployment.yaml
k8s/frontend/: deployment.yaml
prometheus/: alerts.yaml  prometheus.yaml
scripts/: build-and-run.ps1  build.sh  commit-exclude-workflows.ps1  deploy.sh  git-multi-commit.ps1  rewrite-authors.ps1  rewrite-authors.sh
(+12 files in other folders)
